--- a/libreofficeextensioncreator.ui
+++ b/libreofficeextensioncreator.ui
@@ -134,6 +134,209 @@ p, li { white-space: pre-wrap; }
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:12pt;&quot;&gt;You can use this program to create a new non-code LibreOffice extension.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>320</y>
+     <width>371</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Please insert the version number of the extension (e.gl 0.1)</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_3">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>340</y>
+     <width>341</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>460</y>
+     <width>341</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Please chose the platform, that your extension runs on.</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="comboBox">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>490</y>
+     <width>171</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <item>
+    <property name="text">
+     <string extracomment="Includes all platforms">all</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>linux_x86</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>linux_x86_64</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>windows_x86</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>macosx_x86</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>macosx_x86_64</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>free_bsd_x86</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>free_bsd_x86_x64</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>linux_arm_eabi</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>linux_arm_oabi</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>linux_ia64</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>linux_mips_eb</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>linux_mips_el</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>linux_powerpc</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>linux_powerpc64</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>linux_s390</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>linux_s390x</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>linux_sparc</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>macosx_powerpc</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>os2_x86</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>solaris_sparc</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>solaris_x86</string>
+    </property>
+   </item>
+  </widget>
+  <widget class="QLabel" name="label_6">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>370</y>
+     <width>341</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Please insert the extension name that should be displayed in the LibreOffie Extension manager.</string>
+   </property>
+   <property name="wordWrap">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_4">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>420</y>
+     <width>341</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections>
