--- a/libreofficeextensioncreator.ui
+++ b/libreofficeextensioncreator.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>931</width>
-    <height>884</height>
+    <height>927</height>
    </rect>
   </property>
   <property name="font">
@@ -28,7 +28,7 @@
    <property name="geometry">
     <rect>
      <x>320</x>
-     <y>760</y>
+     <y>860</y>
      <width>341</width>
      <height>32</height>
     </rect>
@@ -65,14 +65,14 @@
     </font>
    </property>
    <property name="text">
-    <string>Please insert the Name of your LibreOffice Extension</string>
+    <string>Name of your LibreOffice Extension</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEdit_2">
    <property name="geometry">
     <rect>
      <x>190</x>
-     <y>270</y>
+     <y>310</y>
      <width>341</width>
      <height>31</height>
     </rect>
@@ -82,7 +82,7 @@
    <property name="geometry">
     <rect>
      <x>190</x>
-     <y>250</y>
+     <y>290</y>
      <width>341</width>
      <height>20</height>
     </rect>
@@ -93,7 +93,7 @@
     </font>
    </property>
    <property name="text">
-    <string>Please insert the name of your Organisation</string>
+    <string>Name of your Organisation</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_3">
@@ -138,7 +138,7 @@ p, li { white-space: pre-wrap; }
    <property name="geometry">
     <rect>
      <x>190</x>
-     <y>320</y>
+     <y>360</y>
      <width>371</width>
      <height>20</height>
     </rect>
@@ -149,14 +149,14 @@ p, li { white-space: pre-wrap; }
     </font>
    </property>
    <property name="text">
-    <string>Please insert the version number of the extension (e.gl 0.1)</string>
+    <string>Version number of the extension (e.gl 0.1)</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEdit_3">
    <property name="geometry">
     <rect>
      <x>190</x>
-     <y>340</y>
+     <y>380</y>
      <width>341</width>
      <height>31</height>
     </rect>
@@ -169,7 +169,7 @@ p, li { white-space: pre-wrap; }
    <property name="geometry">
     <rect>
      <x>190</x>
-     <y>460</y>
+     <y>500</y>
      <width>341</width>
      <height>20</height>
     </rect>
@@ -187,7 +187,7 @@ p, li { white-space: pre-wrap; }
    <property name="geometry">
     <rect>
      <x>190</x>
-     <y>490</y>
+     <y>530</y>
      <width>171</width>
      <height>32</height>
     </rect>
@@ -307,7 +307,7 @@ p, li { white-space: pre-wrap; }
    <property name="geometry">
     <rect>
      <x>190</x>
-     <y>370</y>
+     <y>410</y>
      <width>341</width>
      <height>51</height>
     </rect>
@@ -328,13 +328,196 @@ p, li { white-space: pre-wrap; }
    <property name="geometry">
     <rect>
      <x>190</x>
-     <y>420</y>
+     <y>460</y>
      <width>341</width>
      <height>31</height>
     </rect>
    </property>
    <property name="text">
     <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_5">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>250</y>
+     <width>341</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_7">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>230</y>
+     <width>431</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Name of the extension author </string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_8">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>580</y>
+     <width>341</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Minimal LibreOffice version (e.g. 4.2)</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="comboBox_2">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>610</y>
+     <width>83</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <item>
+    <property name="text">
+     <string>4.2</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>4.3</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>4.4</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>5.0</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>5.1</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>5.2</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>5.3</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>5.4</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>6.0</string>
+    </property>
+   </item>
+  </widget>
+  <widget class="QComboBox" name="comboBox_3">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>750</y>
+     <width>83</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <item>
+    <property name="text">
+     <string>admin</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>user</string>
+    </property>
+   </item>
+  </widget>
+  <widget class="QLabel" name="label_9">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>690</y>
+     <width>331</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>14</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Registration /  License</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_10">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>720</y>
+     <width>171</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Accepted by:</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="checkBox">
+   <property name="geometry">
+    <rect>
+     <x>450</x>
+     <y>750</y>
+     <width>171</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>surpress-on-update</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="checkBox_2">
+   <property name="geometry">
+    <rect>
+     <x>450</x>
+     <y>780</y>
+     <width>171</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>surpress-if-required</string>
    </property>
   </widget>
  </widget>
