--- a/extensioncreator.ui
+++ b/extensioncreator.ui
@@ -27,8 +27,8 @@
   <widget class="QLineEdit" name="ExtensionName">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>190</y>
+     <x>40</x>
+     <y>170</y>
      <width>341</width>
      <height>31</height>
     </rect>
@@ -43,8 +43,8 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>170</y>
+     <x>40</x>
+     <y>150</y>
      <width>431</width>
      <height>20</height>
     </rect>
@@ -61,8 +61,8 @@
   <widget class="QLineEdit" name="Organization">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>310</y>
+     <x>420</x>
+     <y>230</y>
      <width>341</width>
      <height>31</height>
     </rect>
@@ -74,8 +74,8 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>290</y>
+     <x>420</x>
+     <y>210</y>
      <width>341</width>
      <height>20</height>
     </rect>
@@ -92,7 +92,7 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>190</x>
+     <x>40</x>
      <y>20</y>
      <width>451</width>
      <height>41</height>
@@ -110,11 +110,14 @@
   <widget class="QTextEdit" name="textEdit">
    <property name="geometry">
     <rect>
-     <x>190</x>
+     <x>40</x>
      <y>80</y>
-     <width>341</width>
-     <height>74</height>
+     <width>691</width>
+     <height>41</height>
     </rect>
+   </property>
+   <property name="inputMethodHints">
+    <set>Qt::ImhNone</set>
    </property>
    <property name="readOnly">
     <bool>true</bool>
@@ -130,8 +133,8 @@ p, li { white-space: pre-wrap; }
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>360</y>
+     <x>40</x>
+     <y>210</y>
      <width>371</width>
      <height>20</height>
     </rect>
@@ -148,8 +151,8 @@ p, li { white-space: pre-wrap; }
   <widget class="QLineEdit" name="ExtensionVersion">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>380</y>
+     <x>40</x>
+     <y>230</y>
      <width>341</width>
      <height>31</height>
     </rect>
@@ -164,8 +167,8 @@ p, li { white-space: pre-wrap; }
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>500</y>
+     <x>40</x>
+     <y>350</y>
      <width>341</width>
      <height>20</height>
     </rect>
@@ -182,8 +185,8 @@ p, li { white-space: pre-wrap; }
   <widget class="QComboBox" name="Platform">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>530</y>
+     <x>40</x>
+     <y>380</y>
      <width>171</width>
      <height>32</height>
     </rect>
@@ -302,8 +305,8 @@ p, li { white-space: pre-wrap; }
   <widget class="QLabel" name="label_6">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>410</y>
+     <x>40</x>
+     <y>260</y>
      <width>341</width>
      <height>51</height>
     </rect>
@@ -323,8 +326,8 @@ p, li { white-space: pre-wrap; }
   <widget class="QLineEdit" name="DisplayedName">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>460</y>
+     <x>40</x>
+     <y>310</y>
      <width>341</width>
      <height>31</height>
     </rect>
@@ -339,8 +342,8 @@ p, li { white-space: pre-wrap; }
   <widget class="QLineEdit" name="Author">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>250</y>
+     <x>420</x>
+     <y>170</y>
      <width>341</width>
      <height>31</height>
     </rect>
@@ -352,8 +355,8 @@ p, li { white-space: pre-wrap; }
   <widget class="QLabel" name="label_7">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>230</y>
+     <x>420</x>
+     <y>150</y>
      <width>431</width>
      <height>20</height>
     </rect>
@@ -364,14 +367,14 @@ p, li { white-space: pre-wrap; }
     </font>
    </property>
    <property name="text">
-    <string>Name of the extension author </string>
+    <string>Name of the extension author / publisher</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_8">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>580</y>
+     <x>40</x>
+     <y>430</y>
      <width>341</width>
      <height>20</height>
     </rect>
@@ -388,8 +391,8 @@ p, li { white-space: pre-wrap; }
   <widget class="QComboBox" name="LibreOfficeVersion">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>610</y>
+     <x>40</x>
+     <y>460</y>
      <width>83</width>
      <height>32</height>
     </rect>
@@ -608,6 +611,77 @@ p, li { white-space: pre-wrap; }
    </property>
    <property name="standardButtons">
     <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_9">
+   <property name="geometry">
+    <rect>
+     <x>420</x>
+     <y>280</y>
+     <width>321</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>URL of the author's / publisher's  website or blog </string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="Website">
+   <property name="geometry">
+    <rect>
+     <x>420</x>
+     <y>310</y>
+     <width>341</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="inputMethodHints">
+    <set>Qt::ImhNone</set>
+   </property>
+   <property name="placeholderText">
+    <string>https://example.org</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_12">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>510</y>
+     <width>71</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="toolTip">
+    <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Noto Sans'; font-size:12pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;A unique identifier for the extension. It is used from the LibreOffice extension manager to differentiate between extensions and maybe for an extension update process.&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Example for the identifier: 'o r g . mycompany . m y f i r s t e x t e n s i o n'&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+   <property name="text">
+    <string>Identifier</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>540</y>
+     <width>361</width>
+     <height>37</height>
+    </rect>
+   </property>
+   <property name="toolTip">
+    <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Noto Sans'; font-size:12pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;A unique identifier for the extension. It is used from the LibreOffice extension manager to differentiate between extensions and maybe for an extension update process.&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Example for the identifier: 'o r g . mycompany . m y f i r s t e x t e n s i o n'&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+   <property name="placeholderText">
+    <string>org.mycompany.myfirstextension</string>
    </property>
   </widget>
  </widget>
