--- a/extensioncreator.ui
+++ b/extensioncreator.ui
@@ -58,37 +58,6 @@
     <string>Name of your LibreOffice Extension</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="Organization">
-   <property name="geometry">
-    <rect>
-     <x>420</x>
-     <y>230</y>
-     <width>341</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="placeholderText">
-    <string>Example.org</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_2">
-   <property name="geometry">
-    <rect>
-     <x>420</x>
-     <y>210</y>
-     <width>341</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>10</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>Name of your Organisation</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
@@ -168,7 +137,7 @@ p, li { white-space: pre-wrap; }
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>350</y>
+     <y>430</y>
      <width>341</width>
      <height>20</height>
     </rect>
@@ -186,7 +155,7 @@ p, li { white-space: pre-wrap; }
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>380</y>
+     <y>460</y>
      <width>171</width>
      <height>32</height>
     </rect>
@@ -306,7 +275,7 @@ p, li { white-space: pre-wrap; }
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>260</y>
+     <y>340</y>
      <width>341</width>
      <height>51</height>
     </rect>
@@ -327,7 +296,7 @@ p, li { white-space: pre-wrap; }
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>310</y>
+     <y>390</y>
      <width>341</width>
      <height>31</height>
     </rect>
@@ -374,7 +343,7 @@ p, li { white-space: pre-wrap; }
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>430</y>
+     <y>510</y>
      <width>341</width>
      <height>20</height>
     </rect>
@@ -392,7 +361,7 @@ p, li { white-space: pre-wrap; }
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>460</y>
+     <y>540</y>
      <width>83</width>
      <height>32</height>
     </rect>
@@ -617,7 +586,7 @@ p, li { white-space: pre-wrap; }
    <property name="geometry">
     <rect>
      <x>420</x>
-     <y>280</y>
+     <y>210</y>
      <width>321</width>
      <height>23</height>
     </rect>
@@ -630,7 +599,7 @@ p, li { white-space: pre-wrap; }
    <property name="geometry">
     <rect>
      <x>420</x>
-     <y>310</y>
+     <y>230</y>
      <width>341</width>
      <height>31</height>
     </rect>
@@ -646,7 +615,7 @@ p, li { white-space: pre-wrap; }
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>510</y>
+     <y>270</y>
      <width>71</width>
      <height>23</height>
     </rect>
@@ -663,13 +632,13 @@ p, li { white-space: pre-wrap; }
     <string>Identifier</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit">
+  <widget class="QLineEdit" name="Identifier">
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>540</y>
-     <width>361</width>
-     <height>37</height>
+     <y>300</y>
+     <width>341</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="toolTip">
@@ -688,8 +657,9 @@ p, li { white-space: pre-wrap; }
  <tabstops>
   <tabstop>ExtensionName</tabstop>
   <tabstop>Author</tabstop>
-  <tabstop>Organization</tabstop>
   <tabstop>ExtensionVersion</tabstop>
+  <tabstop>Website</tabstop>
+  <tabstop>Identifier</tabstop>
   <tabstop>DisplayedName</tabstop>
   <tabstop>Platform</tabstop>
   <tabstop>LibreOfficeVersion</tabstop>
