--- a/extensioncreator.ui
+++ b/extensioncreator.ui
@@ -62,41 +62,20 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>20</y>
+     <y>30</y>
      <width>451</width>
      <height>41</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>20</pointsize>
+     <pointsize>22</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
     </font>
    </property>
    <property name="text">
     <string>LibreOffice Extension Creator</string>
-   </property>
-  </widget>
-  <widget class="QTextEdit" name="textEdit">
-   <property name="geometry">
-    <rect>
-     <x>40</x>
-     <y>80</y>
-     <width>691</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="inputMethodHints">
-    <set>Qt::ImhNone</set>
-   </property>
-   <property name="readOnly">
-    <bool>true</bool>
-   </property>
-   <property name="html">
-    <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Noto Sans'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:12pt;&quot;&gt;You can use this program to create a new non-code LibreOffice extension.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_4">
@@ -445,15 +424,15 @@ p, li { white-space: pre-wrap; }
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
-     <x>170</x>
-     <y>670</y>
-     <width>671</width>
-     <height>171</height>
+     <x>30</x>
+     <y>540</y>
+     <width>801</width>
+     <height>291</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>13</pointsize>
+     <pointsize>15</pointsize>
      <weight>75</weight>
      <bold>true</bold>
     </font>
@@ -465,16 +444,16 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>60</y>
+      <y>50</y>
       <width>171</width>
       <height>20</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>10</pointsize>
-      <weight>50</weight>
-      <bold>false</bold>
+      <pointsize>13</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
      </font>
     </property>
     <property name="text">
@@ -492,9 +471,9 @@ p, li { white-space: pre-wrap; }
     </property>
     <property name="font">
      <font>
-      <pointsize>10</pointsize>
-      <weight>50</weight>
-      <bold>false</bold>
+      <pointsize>12</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
      </font>
     </property>
     <item>
@@ -511,8 +490,8 @@ p, li { white-space: pre-wrap; }
    <widget class="QCheckBox" name="checkBox_2">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>90</y>
+      <x>160</x>
+      <y>120</y>
       <width>171</width>
       <height>22</height>
      </rect>
@@ -531,8 +510,8 @@ p, li { white-space: pre-wrap; }
    <widget class="QCheckBox" name="checkBox">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>60</y>
+      <x>160</x>
+      <y>90</y>
       <width>171</width>
       <height>22</height>
      </rect>
@@ -548,25 +527,63 @@ p, li { white-space: pre-wrap; }
      <string>surpress-on-update</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QLabel" name="label_11">
     <property name="geometry">
      <rect>
-      <x>460</x>
-      <y>70</y>
-      <width>181</width>
-      <height>34</height>
+      <x>350</x>
+      <y>50</y>
+      <width>311</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>10</pointsize>
-      <weight>50</weight>
-      <bold>false</bold>
+      <pointsize>13</pointsize>
      </font>
     </property>
     <property name="text">
-     <string>Choose the License File</string>
+     <string>Choose a license for your extension</string>
     </property>
+    <property name="wordWrap">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="License">
+    <property name="geometry">
+     <rect>
+      <x>350</x>
+      <y>100</y>
+      <width>411</width>
+      <height>37</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <item>
+     <property name="text">
+      <string>GPL-2.0 (General Public License Version 2.0)</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>GPL-3.0 (General Public License Version 3.0)</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>LGPL-3.0 (Lesser General Public License Version 3.0)</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>LGPL-2.1 (Lesser General Public License Version 2.1)</string>
+     </property>
+    </item>
    </widget>
   </widget>
   <widget class="QDialogButtonBox" name="buttonBox">
@@ -682,6 +699,24 @@ p, li { white-space: pre-wrap; }
     <string>Choose Description / Documentation File</string>
    </property>
   </widget>
+  <widget class="QLabel" name="label_13">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>80</y>
+     <width>711</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>15</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>You can use this program to create a new non-code LibreOffice extension.</string>
+   </property>
+  </widget>
  </widget>
  <tabstops>
   <tabstop>ExtensionName</tabstop>
@@ -695,27 +730,9 @@ p, li { white-space: pre-wrap; }
   <tabstop>Accepted_by</tabstop>
   <tabstop>checkBox</tabstop>
   <tabstop>checkBox_2</tabstop>
-  <tabstop>pushButton</tabstop>
-  <tabstop>textEdit</tabstop>
  </tabstops>
  <resources/>
  <connections>
-  <connection>
-   <sender>pushButton</sender>
-   <signal>clicked()</signal>
-   <receiver>Dialog</receiver>
-   <slot>open()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>720</x>
-     <y>756</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>465</x>
-     <y>463</y>
-    </hint>
-   </hints>
-  </connection>
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
