--- a/src/liboextensioncreator/liboextensioncreator.css
+++ b/src/liboextensioncreator/liboextensioncreator.css
@@ -12,6 +12,22 @@ QLineEdit {
     background-color: rgb(238, 239, 241);
 }
 
+QPushButton {
+    background-color: #F09E6F;
+}
+
+QComboBox {
+    background-color: #F09E6F;
+}
+
+QComboBox::item {
+    background-color: #E1E1E1;
+}
+
+QComboBox::item:selected, QComboBox::item:hover {
+    background-color: #F09E6F;
+}
+
 QGroupBox#topgroupbox {
     margin-top: 10px;
     font-size: 40px;
@@ -26,6 +42,15 @@ QLabel#toplabel {
 
 QTabWidget {
     border: none;
+}
+
+QWidget#tab1 {
+    background-color: #E1E1E1;
+    border: none;
+}
+
+#tab1 QLabel {
+    background-color: #E1E1E1;
 }
 
 QTabBar::tab {
@@ -56,6 +81,14 @@ QTabBar::tab:selected, QTabBar::tab:hover {
 
 #bottomgroupbox QDialogButtonBox *[text="Cancel"]:enabled {
     background-color: red;
+}
+
+#bottomgroupbox {
+    background-color: #E1E1E1;
+}
+
+#bottomgroupbox QLabel {
+    background-color: #E1E1E1;
 }
 
 #suppressgroupbox QCheckBox {
